[package]
name = "canvas-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0-only"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", rev = "f708278335e30667af1434e19872a862c54ebf8b" }

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive']}
log = { version = "0.4.14", default-features = false }
serde = { version = '1.0.119', optional = true, features = ['derive'] }
smallvec = "1.6.1"

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
sp-core = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
sp-inherents = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
sp-io = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
sp-offchain = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
sp-session = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
sp-std = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
sp-version = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }

## Substrate FRAME Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
frame-executive = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false, rev = "f708278335e30667af1434e19872a862c54ebf8b" }
frame-system = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }

## Substrate Pallet Dependencies
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
pallet-balances = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', default-features = false , rev = "f708278335e30667af1434e19872a862c54ebf8b" }

# Cumulus Dependencies
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus', default-features = false , rev = "6c8f1f7b3cabef9c724772c76fb9adcb12c09506" }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus', default-features = false , rev = "6c8f1f7b3cabef9c724772c76fb9adcb12c09506" }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', default-features = false , rev = "6c8f1f7b3cabef9c724772c76fb9adcb12c09506" }
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', default-features = false , rev = "6c8f1f7b3cabef9c724772c76fb9adcb12c09506" }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus', default-features = false , rev = "6c8f1f7b3cabef9c724772c76fb9adcb12c09506" }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', default-features = false , rev = "6c8f1f7b3cabef9c724772c76fb9adcb12c09506" }
cumulus-primitives-timestamp = { git = 'https://github.com/paritytech/cumulus', default-features = false , rev = "6c8f1f7b3cabef9c724772c76fb9adcb12c09506" }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus', default-features = false , rev = "6c8f1f7b3cabef9c724772c76fb9adcb12c09506" }
parachain-info = { git = 'https://github.com/paritytech/cumulus', default-features = false , rev = "6c8f1f7b3cabef9c724772c76fb9adcb12c09506" }

# Polkadot Dependencies
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', default-features = false , rev = "977ad94ca034c504b12965ba739290f5c9f8effd" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", default-features = false, rev = "977ad94ca034c504b12965ba739290f5c9f8effd" }
xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false , rev = "977ad94ca034c504b12965ba739290f5c9f8effd" }
xcm-builder = { git = 'https://github.com/paritytech/polkadot', default-features = false , rev = "977ad94ca034c504b12965ba739290f5c9f8effd" }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', default-features = false , rev = "977ad94ca034c504b12965ba739290f5c9f8effd" }
pallet-xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false , rev = "977ad94ca034c504b12965ba739290f5c9f8effd" }

# Contracts specific packages
pallet-contracts = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "f708278335e30667af1434e19872a862c54ebf8b" }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "f708278335e30667af1434e19872a862c54ebf8b" }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "f708278335e30667af1434e19872a862c54ebf8b" }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"serde",
	"log/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-contracts/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"cumulus-pallet-aura-ext/std",
    "cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"parachain-info/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
]

# Make contract callable functions marked as __unstable__ available. Do not enable
# on live chains as those are subject to change.
contracts-unstable-interface = [
	"pallet-contracts/unstable-interface"
]

runtime-benchmarks = [
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
]
